--- a/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.csci448.tcranor.criminalintent">
+          package="com.csci448.tcranor.smartlist">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".CrimeListActivity">
+        <activity android:name="com.csci448.tcranor.smartlist.CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -17,9 +17,9 @@
         </activity>
 
         <activity
-            android:name=".CrimePagerActivity"
+            android:name="com.csci448.tcranor.smartlist.CrimePagerActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".CrimeListActivity">
+            android:parentActivityName="com.csci448.tcranor.smartlist.CrimeListActivity">
         </activity>
 
     </application>
