--- a/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -23,5 +23,16 @@
         </activity>
 
     </application>
+    <receiver
+        android:label="@string/app_name"
+        android:name=".Widget.WidgetProvider">
+        <intent-filter>
+            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+        </intent-filter>
+        <meta-data android:name="android.appwidget.provider"
+                   android:resource="@xml/widget_provider" />
+    </receiver>
+    <service android:name=".Widget.WidgetService"
+             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
 </manifest>
