--- a/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <receiver
+            android:label="@string/app_name"
+            android:name=".WidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                       android:resource="@xml/widget_provider" />
+        </receiver>
+        <service android:name=".WidgetService"
+                 android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <activity android:name="com.csci448.tcranor.smartlist.NoteListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,16 +35,7 @@
         </activity>
 
     </application>
-    <receiver
-        android:label="@string/app_name"
-        android:name=".Widget.WidgetProvider">
-        <intent-filter>
-            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-        </intent-filter>
-        <meta-data android:name="android.appwidget.provider"
-                   android:resource="@xml/widget_provider" />
-    </receiver>
-    <service android:name=".Widget.WidgetService"
-             android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+
 
 </manifest>
